RESOLVED FIXED215251
Pocket City game play area is blank (WebGL is broken in Catalyst)
https://bugs.webkit.org/show_bug.cgi?id=215251
Summary Pocket City game play area is blank (WebGL is broken in Catalyst)
Dean Jackson
Reported 2020-08-06 18:38:40 PDT
Pocket City game play area is blank (WebGL is broken in Catalyst)
Attachments
Patch (3.55 KB, patch)
2020-08-06 18:42 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2020-08-06 18:39:31 PDT
Dean Jackson
Comment 2 2020-08-06 18:42:42 PDT
Dean Jackson
Comment 3 2020-08-07 02:29:10 PDT
Darin Adler
Comment 4 2020-08-07 15:57:49 PDT
Comment on attachment 406146 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406146&action=review > Source/WebCore/platform/graphics/cocoa/GraphicsContextGLOpenGLCocoa.mm:404 > +#if PLATFORM(MAC) I suggest we try to avoid unnecessary #if nesting. Here we could have done an #endif above, then would not need two different #else below.
Dean Jackson
Comment 5 2020-08-13 15:58:04 PDT
Fixed. Thanks Darin.
Dean Jackson
Comment 6 2020-08-13 15:59:40 PDT
Note You need to log in before you can comment on or make changes to this bug.