Pocket City game play area is blank (WebGL is broken in Catalyst) https://bugs.webkit.org/show_bug.cgi?id=215251

Reviewed by Tim Horton.

Our configuration for WebGL under Catalyst was incorrect. Since
it uses "desktop" OpenGL, it had to use the normal macOS setup
(enabling texture rectangle extension, and the correct target).

* platform/graphics/GraphicsContextGL.h: Add PLATFORM(MACCATALYST).
* platform/graphics/cocoa/GraphicsContextGLOpenGLCocoa.mm: Ditto.
(WebCore::GraphicsContextGLOpenGL::GraphicsContextGLOpenGL):

Canonical link: https://commits.webkit.org/228044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265366 268f45cc-cd09-0410-ab3c-d52691b4dbfc